Read file in server, dictionary

--- a/templates/nltk_file.html
+++ b/templates/nltk_file.html
@@ -29,7 +29,7 @@
 </head>
 <body style="background-image: url( image/background.png ); no-repeat;">
 <nav class="navbar navbar-default navbar-fixed-top" style="background: #ffffff00; border-color:#ffffff00">
-    <div class="container" style="padding: 20px 0; background: #ffffff00; border-color:#ffffff00"">
+    <div class="container" style="padding: 20px 0; background: #ffffff00; border-color:#ffffff00">
         <ul class="nav nav-pills">
           <li role="presentation"><a href="/">Home</a></li>
           <li role="presentation" class="active"><a href="/file">File</a></li>
